Bug 124226 - LibreOffice crashes / hangs traversing page dialog with the keyboard
Summary: LibreOffice crashes / hangs traversing page dialog with the keyboard
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.3
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2019-03-20 16:38 UTC by Xisco Faulí
Modified: 2019-03-21 09:10 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
part of bt (22.15 KB, text/plain)
2019-03-20 20:34 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-03-20 16:38:15 UTC
Steps to reproduce:
1. Open writer
2. Go to Format - Page
3. Page tab
4. Use tab to traverse the different items in the dialog

-> with GTK3 it crashes moving from Paper tray to margin Left. With GTK / GEN it hangs

Reproduced in

Version: 6.3.0.0.alpha0+
Build ID: eb128a7d6bbc27b4dbbf9461c81c90e40203b114
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2019-03-20 16:41:43 UTC
Regression introduced by:

https://gerrit.libreoffice.org/plugins/gitiles/core/+/6af7bd87a64ddd93e3beef134914311eeac07373%5E%21

author	Caolán McNamara <caolanm@redhat.com>	2019-03-16 21:46:54 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2019-03-17 00:35:46 +0100
commit 6af7bd87a64ddd93e3beef134914311eeac07373 (patch)
tree 0cc2c502bf10bd0d85e60abf05b33f21148d77e7
parent ed4a0eed82e2f29e8163a445db992d22c6d07134 (diff)
Resolves: tdf#123650 explicitly grab focus after modification
of the widget after gaining focus, otherwise gtk loses track
of where the focus should be

Bisected with: bibisect-linux64-6.3

Adding Cc: to Caolán McNamara
Comment 2 Caolán McNamara 2019-03-20 17:11:58 UTC
works fine for me, but... I wonder if that is because I have a printer tray, so it will only try this once. In a non-crashing version of libreoffice do you have only "from printer settings" available in the list ?
Comment 3 Xisco Faulí 2019-03-20 17:33:43 UTC
(In reply to Caolán McNamara from comment #2)
> works fine for me, but... I wonder if that is because I have a printer tray,
> so it will only try this once. In a non-crashing version of libreoffice do
> you have only "from printer settings" available in the list ?

Yes, I only have the option [From Printing Settings].
In fact, clicking on this dropdown list with the mouse makes Libreoffice to crash as well...
Comment 4 Julien Nabet 2019-03-20 20:34:40 UTC
Created attachment 150132 [details]
part of bt

On pc Debian x86-64 with master sources updated yesterday + gtk3, I could reproduce the crash.
The bt isn't complete, it seems there's a kind of loop.
If it can help a bit..
Comment 5 Commit Notification 2019-03-20 21:17:53 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/122839ea51b3e8ec54d97d43bdbf616db00ae9cd%5E%21

tdf#124226 do fill-on-demand hack only on first visit

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2019-03-21 09:10:10 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 7c7a4675ad5d61add70dd073f680ea37012962ce
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!