tdf#124226 do fill-on-demand hack only on first visit

disconnect focus handler after the fill

Change-Id: I77bffe4fa4c516452c36ddb2d816cd5844000c1b
Reviewed-on: https://gerrit.libreoffice.org/69479
Tested-by: Xisco Faulí <xiscofauli@libreoffice.org>
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>